<resources>
    <string name="app_name">UnipiAlert</string>
    <string name="action_done">Delete all contacts</string>
    <string name="verify">Verify your informations</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_text">Please Register first</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm">Confirm</string>
    <string name="hide_pass">Hide Password</string>
    <string name="records">Records</string>
    <string name="sos" translatable="false">SOS</string>
    <string name="error">Error</string>
    <string name="abort">Abort</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add_contacts">Add Contact\'s Information:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="save_or_delete">Edit or Delete Contact:</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="fall_detect">Fall detection</string>
    <string name="be_calm">Please be calm! help will soon arrive. Everything is gonna be okay. You are in great hands</string>
    <string name="longitude">I\'m at the location with longitude: </string>
    <string name="latitude"> and latitude: </string>
    <string name="help"> and I need help</string>
    <string name="light">Light</string>
    <string name="light_value">light value: </string>
    <string name="date_time">date and time: </string>
    <string name="state">SOS state: </string>
    <string name="no_records">No records!</string>
    <string name="be_careful">BE CAREFUL</string>
    <string name="access_phone">Someone else is trying to access this phone</string>
    <string name="high_brightness">high brightness conditions were detected!</string>
    <string name="sms_failed">SMS failed, please try again later!</string>
    <string name="try_again">Ops, Wrong! Try again!</string>
    <string name="fill">Fill both fields!</string>
    <string name="help_send">Help has been sent!</string>
    <string name="success">Success</string>
    <string name="deleted">Your contact has been deleted!</string>
    <string name="update">Your contact has been updated!</string>
    <string name="fill_name">Please fill the name!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sorry">Sorry</string>
    <string name="sorry_no_contacts">We couldn\'t find any contacts!</string>
    <string name="title_contact">Contacts</string>
    <string name="help_soon_arrive">Help will soon arrive!</string>
    <string name="cancel_the_alarm">Cancel the alarm! Everything\'s fine!</string>
    <string name="abort_sms">Abort sms has been sent!</string>
    <string name="fill_name_number">You should fill the name and number!</string>
    <string name="record_added">Record Added</string>
    <string name="network_on">Please make sure your Network Connection is ON</string>
    <string name="coordinates_network">We take coordinates from network</string>
    <string name="cancellation">Alarm was cancelled! No one was disturbed! </string>

</resources>
