<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.alertapp.EditDeleteActivity">

        <TextView
            android:id="@+id/View"
            android:layout_width="132dp"
            android:layout_height="46dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/first_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/View2"
            android:layout_width="132dp"
            android:layout_height="46dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="44dp"
            android:gravity="center"
            android:text="@string/last_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/Text2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/View" />

        <TextView
            android:id="@+id/View3"
            android:layout_width="132dp"
            android:layout_height="46dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/Text3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/View2" />

        <EditText
            android:id="@+id/Text"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="60dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:text=""
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Text2"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:text=""
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text" />

        <EditText
            android:id="@+id/Text3"
            android:layout_width="168dp"
            android:layout_height="46dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text=""
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Text2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/buttonselector"
            android:onClick="edit_contact"
            android:text="@string/save"
            android:textColor="#FFFF"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/View3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="72dp"
            android:background="@drawable/button_delete_selector"
            android:onClick="delete_contact"
            android:text="@string/delete"
            android:textColor="#FFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/save_or_delete"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/View"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
